[project]
name = "v-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Annmary Vinod",email = "annmarypriyavinod@gmail.com"}
]
readme = "README.md"
packages = [{include = "app"}]
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
